--- a/Website/Collabs.html
+++ b/Website/Collabs.html
@@ -9,9 +9,9 @@
         <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
         <div class="topnav" id="myTopnav">
             <a href="index.html">Home</a>
-            <a href="Collabs.html">Notable Collabs</a>
+            <a href="Collabs.html" class="active">Notable Collabs</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
-            <a href="ShadowStormYT.html" class="active">ShadowStormYT</a>
+            <a href="ShadowStormYT.html">ShadowStormYT</a>
             <a href="StormCrewYT.html">StormCrewYT</a>
             <a href="StormCrew Programming.html">StormCrew Programming</a>
         </div>
