--- a/Website/Nameless Graphics.html
+++ b/Website/Nameless Graphics.html
@@ -8,9 +8,9 @@
                                     <!--Navigation Bar-->
         <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html">Home</a>
             <a href="Collabs.html">Notable Collabs</a>
-            <a href="Nameless Graphics.html">NamelessGraphics</a>
+            <a href="Nameless Graphics.html" class="active">NamelessGraphics</a>
             <a href="ShadowStormYT.html">ShadowStormYT</a>
             <a href="StormCrewYT.html">StormCrewYT</a>
             <a href="StormCrew Programming.html">StormCrew Programming</a>
