--- a/Website/StormCrewYT.html
+++ b/Website/StormCrewYT.html
@@ -11,8 +11,8 @@
             <a href="index.html">Home</a>
             <a href="Collabs.html">Notable Collabs</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
-            <a href="ShadowStormYT.html" class="active">ShadowStormYT</a>
-            <a href="StormCrewYT.html">StormCrewYT</a>
+            <a href="ShadowStormYT.html" >ShadowStormYT</a>
+            <a href="StormCrewYT.html" class="active">StormCrewYT</a>
             <a href="StormCrew Programming.html">StormCrew Programming</a>
         </div>
         <div align="center">
