updated StormCrew CSS

--- a/Website/StormCrewYT.html
+++ b/Website/StormCrewYT.html
@@ -15,8 +15,9 @@
             <a href="StormCrewYT.html" class="active">StormCrewYT</a>
             <a href="StormCrew Programming.html">StormCrew Programming</a>
         </div>
-        <div align="center">
-            
+        <div class="row">
+            <div class="column"></div>
+            <div class="column"></div>
         </div>
     </body>
 </html>
