--- a/Website/Collabs.html
+++ b/Website/Collabs.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="CSS/ShadowStorm.css">
+        <link rel="stylesheet" type="text/css" href="CSS/collabs.css">
     </head>
     <body>
                                     <!--Navigation Bar-->
