--- a/Website/StormCrewYT.html
+++ b/Website/StormCrewYT.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="CSS/ShadowStorm.css">
+        <link rel="stylesheet" type="text/css" href="CSS/Crew.css">
     </head>
     <body>
                                     <!--Navigation Bar-->
@@ -14,6 +14,10 @@
             <a href="ShadowStormYT.html" >ShadowStormYT</a>
             <a href="StormCrewYT.html" class="active">StormCrewYT</a>
             <a href="StormCrew Programming.html">StormCrew Programming</a>
+        </div>
+
+        <div>
+            <img src="images/StormCrew V2 (Chrome) (1).png" alt="StormCrewYT" class="GlowStorm">
         </div>
         <div class="row">
             <div class="column"></div>
