--- a/Website/ShadowStormYT.html
+++ b/Website/ShadowStormYT.html
@@ -16,7 +16,7 @@
             <a href="StormCrew Programming.html">StormCrew Programming</a>
         </div>
         <div align="center">
-            <img src="images/ShadowStorm V1.png" class="GlowStorm" alt="ShadowStorm"
+            <img src="images/ShadowStorm V1.png" class="GlowStorm" alt="ShadowStorm">
         </div>
     </body>
 </html>
