--- a/Website/Collabs.html
+++ b/Website/Collabs.html
@@ -15,8 +15,32 @@
             <a href="StormCrewYT.html">StormCrewYT</a>
             <a href="StormCrew Programming.html">StormCrew Programming</a>
         </div>
-        <div align="center">
-            
+                <div align="center">
+                    <div class="row">
+                        <div class="column">
+                            <div class="card">
+                                <div class="container" align="center">
+                                    <img src="images/ALRU.png" alt="ALRU">
+                                <h2>Alliance Reunited</h2>
+                                <h3>Zeropoint</h3>
+                            <p class="title">Founder</p>
+                            <p><button class="button" href="alru.cloud">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="row">
+            <div class="column">
+              <div class="card">
+                <div class="container" align="center">
+                    <img src="images/Nick (Programmer).png" alt="Light Saga">
+                  <h2>The Light Saga</h2>
+                  <p>YouTuber</p>
+                  <p><button class="button" href="#">Contact</button></p>
+                </div>
+              </div>
+            </div>
+          
     </body>
 </html>
