--- a/Website/ShadowStormYT.html
+++ b/Website/ShadowStormYT.html
@@ -17,6 +17,7 @@
         </div>
         <div align="center">
             <img src="images/ShadowStorm V1.png" class="GlowStorm" alt="ShadowStorm">
+            <h1>ShadowStorm is a project created by StormStarbrickYT and ShadowFlare. The channel is still in development but is going to be used in late June</h1>
         </div>
     </body>
 </html>
