--- a/Website/StormCrewYT.html
+++ b/Website/StormCrewYT.html
@@ -12,12 +12,12 @@
             <a href="Collabs.html">Notable Collabs</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
             <a href="ShadowStormYT.html" >ShadowStormYT</a>
-            <a href="StormCrewYT.html" class="active">StormCrewYT</a>
+            <a href="StormCrewYT.html" class="active">WeazelStorm</a>
             <a href="StormCrew Programming.html">StormCrew Programming</a>
         </div>
 
         <div>
-            <img src="images/StormCrew V2 (Chrome) (1).png" alt="StormCrewYT" class="GlowStorm">
+            <img src="images/StormCrew V2 (Chrome) (1).png" alt="WeazelStorm" class="GlowStorm">
         </div>
         <div class="row">
             <div class="column"></div>
