--- a/Website/StormCrewYT.html
+++ b/Website/StormCrewYT.html
@@ -17,7 +17,7 @@
         </div>
 
         <div>
-            <img src="images/StormCrew V2 (Chrome) (1).png" alt="WeazelStorm" class="GlowStorm">
+            <img src="#" alt="WeazelStorm" class="GlowStorm">
         </div>
         <div class="row">
             <div class="column"></div>
