--- a/Website/Collabs.html
+++ b/Website/Collabs.html
@@ -12,7 +12,7 @@
             <a href="Collabs.html" class="active">Notable Collabs</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
             <a href="ShadowStormYT.html" >ShadowStormYT</a>
-            <a href="StormCrewYT.html">WeazelStorm</a>
+            <a href="WeazelStorm.html">WeazelStorm</a>
             <a href="StormCrew Programming.html">StormCrew Programming</a>
         </div>
                 <div align="center">
