--- a/Website/WeazelStorm.html
+++ b/Website/WeazelStorm.html
@@ -12,7 +12,7 @@
             <a href="Collabs.html">Notable Collabs</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
             <a href="ShadowStormYT.html" >ShadowStormYT</a>
-            <a href="StormCrewYT.html" class="active">WeazelStorm</a>
+            <a href="WeazelStorm.html" class="active">WeazelStorm</a>
             <a href="StormCrew Programming.html">StormCrew Programming</a>
         </div>
 
