--- a/Website/Nameless Graphics.html
+++ b/Website/Nameless Graphics.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <!-- Tab Title-->
+        <title>NamelessGraphics</title>
+        <!-- CSS Link -->
         <link rel="stylesheet" type="text/css" href="CSS/Nameless.css">
     </head>
     <body>
@@ -12,10 +14,15 @@
             <a href="Collabs.html">Notable Collabs</a>
             <a href="Nameless Graphics.html" class="active">NamelessGraphics</a>
             <a href="ShadowStormYT.html">ShadowStormYT</a>
-            <a href="WeazelStorm.html">WeazelStorm</a>
+            <a href="StormCrewYT.html">StormCrewYT</a>
+            <a href="StormCrew Programming.html">StormCrew Programming</a>
         </div>
         <div align="center">
+            <!-- Page Banner-->
             <img src="images/NamelessGraphics V2.5.png" alt="nameless" class="GlowStorm">
+
+            <!-- Bio -->
+            <h3>NamelessGraphics is a graphic design company consisting of Ghost_boi__, StormStarbrickYT, and GreenNickYT. The purpose of the group is to further their skills and work to be better graphic designers.</h3>
         </div>
     </body>
 </html>
