--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
             <a href="WeazelStorm.html">WeazelStorm</a>
         </div>
         <div align="center">
-            <img src="images/GlowStorm.jpg" alt="GlowStorm" class="GlowStorm">
+            <img src="images/GlowStorm.jpg" alt="GlowStorm" class="GlowStorm" id="top">
         </div>
                 <!-- Links -->
                 <div align="center">
@@ -52,6 +52,9 @@
                 <div align="center">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Un1ZqIY-xNg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-        
-    </body>
+                <footer>
+                    <a id="back-to-top" href="#">Top</a>
+                </footer>
+            <script src="JavaScript/home.js"></script>
+        </body>
 </html>
