fixed back to top buttons (WIP)

--- a/Website/WeazelStorm.html
+++ b/Website/WeazelStorm.html
@@ -22,5 +22,8 @@
             <div class="column"></div>
             <div class="column"></div>
         </div>
+        <div>
+            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        </div>
     </body>
 </html>
