--- a/Website/Collabs.html
+++ b/Website/Collabs.html
@@ -40,5 +40,8 @@
                     </div>
                 </div>
             </div>
+            <div>
+                <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            </div>
     </body>
 </html>
