--- a/Website/index.html
+++ b/Website/index.html
@@ -53,7 +53,7 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/ZBFALxWBnjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <footer>
-                    <a id="back-to-top" href="#">Top</a>
+                    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
                 </footer>
 
         </body>
