--- a/Website/Collabs.html
+++ b/Website/Collabs.html
@@ -3,45 +3,31 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" type="text/css" href="CSS/collabs.css">
-    </head>
-    <body>
-                                    <!--Navigation Bar-->
-        <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-        <div class="topnav" id="myTopnav">
+        <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
+        <div class="topnav">
             <a href="index.html">Home</a>
-            <a href="Collabs.html" class="active">Notable Collabs</a>
+            <a class="active" href="Collabs.html">Collaborations</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
-            <a href="ShadowStormYT.html" >ShadowStormYT</a>
+            <a href="ShadowStormYT.html">ShadowStormYT</a>
             <a href="WeazelStorm.html">WeazelStorm</a>
         </div>
-                <div align="center">
-                    <div class="row">
-                        <div class="column">
-                            <div class="card">
-                                <div class="container" align="center">
-                                    <img src="images/ALRU.png" alt="ALRU">
-                                <h2>Alliance Reunited</h2>
-                                <h3>Zeropoint</h3>
-                            <p class="title">Founder</p>
-                            <p><button class="button" href="alru.cloud">Contact</button></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    </head>
+    <body>
+        <div align="center" class="collaboration">
+            <img src="images/ALRU.png" alt="ALRU" height="300">
+            <h2>Banabyte Network</h2>
+            <h3>Zeropoint</h3>
+            <p class="title">Founder</p>
+            <p><button class="button" href="https://discord.gg/G6mThnFBNr">Contact</button></p>
         </div>
-        <div class="row">
-            <div class="column">
-                <div class="card">
-                    <div class="container" align="center">
-                        <img src="images/Nick (Programmer).png" alt="Light Saga">
-                        <h2>The Light Saga</h2>
-                        <p>YouTuber</p>
-                        <p><button class="button" href="#">Contact</button></p>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-            </div>
+        <div align="center" class="collaboration">
+            <img src="images/Nick (Programmer).png" alt="Light Saga" height="300">
+            <h2>The Light Saga</h2>
+            <p>YouTuber</p>
+            <p><button class="button" href="#">Contact</button></p>
+        </div>
+        <div>
+            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        </div>
     </body>
 </html>
