--- a/Website/ShadowStormYT.html
+++ b/Website/ShadowStormYT.html
@@ -3,17 +3,17 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" type="text/css" href="CSS/ShadowStorm.css">
-    </head>
-    <body>
-                                    <!--Navigation Bar-->
-        <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-        <div class="topnav" id="myTopnav">
+        <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
+        <div class="topnav">
             <a href="index.html">Home</a>
-            <a href="Collabs.html">Notable Collabs</a>
+            <a class="active" href="Collabs.html">Collaborations</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
-            <a href="ShadowStormYT.html" class="active">ShadowStormYT</a>
+            <a href="ShadowStormYT.html">ShadowStormYT</a>
             <a href="WeazelStorm.html">WeazelStorm</a>
         </div>
+    </head>
+    <body>
+
         <div align="center">
             <img src="images/ShadowStorm V1.png" class="GlowStorm" alt="ShadowStorm">
             <h1>ShadowStorm is a project created by StormStarbrickYT and ShadowFlare. The channel is still in development but is going to be used in late June</h1>
