--- a/Website/index.html
+++ b/Website/index.html
@@ -3,17 +3,16 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" type="text/css" href="CSS/home.css">
-    </head>
-    <body>
-                                    <!--Navigation Bar-->
-        <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-        <div class="topnav" id="myTopnav">
-            <a href="index.html" class="active">Home</a>
-            <a href="Collabs.html">Notable Collabs</a>
+        <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="Collabs.html">Collaborations</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
             <a href="ShadowStormYT.html">ShadowStormYT</a>
             <a href="WeazelStorm.html">WeazelStorm</a>
         </div>
+    </head>
+    <body>
         <div align="center">
             <img src="images/GlowStorm.jpg" alt="GlowStorm" class="GlowStorm" id="top">
         </div>
