--- a/Website/Nameless Graphics.html
+++ b/Website/Nameless Graphics.html
@@ -5,17 +5,18 @@
         <title>NamelessGraphics</title>
         <!-- CSS Link -->
         <link rel="stylesheet" type="text/css" href="CSS/Nameless.css">
+
+        <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="Collabs.html">Collaborations</a>
+            <a href="Nameless Graphics.html">NamelessGraphics</a>
+            <a href="ShadowStormYT.html">ShadowStormYT</a>
+            <a href="WeazelStorm.html">WeazelStorm</a>
+        </div>
     </head>
     <body>
-                                    <!--Navigation Bar-->
-        <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-        <div class="topnav" id="myTopnav">
-            <a href="index.html">Home</a>
-            <a href="Collabs.html">Notable Collabs</a>
-            <a href="Nameless Graphics.html" class="active">NamelessGraphics</a>
-            <a href="ShadowStormYT.html">ShadowStormYT</a>
-            <a href="StormCrewYT.html">StormCrewYT</a>
-        </div>
+
         <div align="center">
             <!-- Page Banner-->
             <img src="images/NamelessGraphics V2.5.png" alt="nameless" class="GlowStorm">
@@ -25,9 +26,6 @@
         </div>
         <div>
             <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        </div>
-        <div>
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi.            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae recusandae esse, eum, dolor harum accusantium necessitatibus vel possimus alias, maiores optio hic. Repudiandae deleniti ut nemo nihil rem nulla excepturi. </h1>
         </div>
     </body>
 </html>
