--- a/Website/WeazelStorm.html
+++ b/Website/WeazelStorm.html
@@ -3,18 +3,16 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" type="text/css" href="CSS/Crew.css">
+        <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="Collabs.html">Collaborations</a>
+            <a href="Nameless Graphics.html">NamelessGraphics</a>
+            <a href="ShadowStormYT.html">ShadowStormYT</a>
+            <a href="WeazelStorm.html">WeazelStorm</a>
+        </div>
     </head>
     <body>
-                                    <!--Navigation Bar-->
-        <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-        <div class="topnav" id="myTopnav">
-            <a href="index.html">Home</a>
-            <a href="Collabs.html">Notable Collabs</a>
-            <a href="Nameless Graphics.html">NamelessGraphics</a>
-            <a href="ShadowStormYT.html" >ShadowStormYT</a>
-            <a href="WeazelStorm.html" class="active">WeazelStorm</a>
-        </div>
-
         <div>
             <img src="#" alt="WeazelStorm" class="GlowStorm">
         </div>
