--- a/Website/WeazelStorm.html
+++ b/Website/WeazelStorm.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
         <div class="topnav">
             <a href="index.html">Home</a>
-            <a class="active" href="Collabs.html">Collaborations</a>
+            <a href="Collabs.html">Collaborations</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
             <a href="ShadowStormYT.html">ShadowStormYT</a>
-            <a href="WeazelStorm.html">WeazelStorm</a>
+            <a class="active" href="WeazelStorm.html">WeazelStorm</a>
         </div>
     </head>
     <body>
