--- a/Website/index.html
+++ b/Website/index.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" type="text/css" href="CSS/home.css">
         <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
         <div class="topnav">
-            <a href="index.html">Home</a>
-            <a class="active" href="Collabs.html">Collaborations</a>
+            <a class="active" href="index.html">Home</a>
+            <a href="Collabs.html">Collaborations</a>
             <a href="Nameless Graphics.html">NamelessGraphics</a>
             <a href="ShadowStormYT.html">ShadowStormYT</a>
             <a href="WeazelStorm.html">WeazelStorm</a>
