--- a/Website/index.html
+++ b/Website/index.html
@@ -19,10 +19,10 @@
                 <div align="center">
 
                         <!-- Twitter -->
-                    <a href="https://www.twitter.com/starbrickstorm" target="_blank"><img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white"></a>
+                    <a href="https://www.twitter.com/stormstarbrick" target="_blank"><img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white"></a>
             
                         <!-- Twitch -->
-                    <a href="https://www.twitch.tv/storm_starbrick" target="_blank"><img src="https://img.shields.io/badge/Twitch-9146FF?style=for-the-badge&logo=twitch&logoColor=white"></a>
+                    <a href="https://www.twitch.tv/stormstarbrickttv" target="_blank"><img src="https://img.shields.io/badge/Twitch-9146FF?style=for-the-badge&logo=twitch&logoColor=white"></a>
             
                         <!-- YouTube -->
                     <a href="https://www.youtube.com/channel/UCbbNzOrD0H8ygCV-T-RtrKw" target="_blank"><img src="https://img.shields.io/badge/YouTube-FF0000?style=for-the-badge&logo=youtube&logoColor=white"></a>
@@ -40,7 +40,7 @@
                 <div align="center">
                     <img src="images/StormStarbrickYT V3.5.png" alt="storm" class="left" width="300px" height="auto">
                     <hr>
-                    <h2 class="mission">StormStarbrickYT is an 18 year old Twitch Streamer and YouTuber. He currently lives in colorado with his friends of the StormCrew, but soon will move to Texas to live with the love of his life, ShadowFlare. He hopes to start streaming again soon, but if not, you can catch his updates on his Twitter, Github, or anywhere else he is online. All links provided above.</h2>
+                    <h2 class="mission">StormStarbrickYT is an 18 year old Twitch Streamer and YouTuber. He currently lives in colorado. He hopes to start streaming again soon, but if not, you can catch his updates on his Twitter, Github, or anywhere else he is online. All links provided above.</h2>
                 </div>
                 <br>
                 <!-- Most Recent Video -->
