--- a/Website/ShadowStormYT.html
+++ b/Website/ShadowStormYT.html
@@ -15,7 +15,7 @@
 
         <div align="center">
             <img src="images/ShadowStorm V1.png" class="GlowStorm" alt="ShadowStorm">
-            <h1>ShadowStorm is a project created by StormStarbrickYT and ShadowFlare. The channel is still in development but is going to be used in late June</h1>
+            <h1>ShadowStorm is a project created by StormStarbrickYT and ShadowFlare. The channel is still in development.</h1>
         </div>
 
     </body>
