--- a/Website/index.html
+++ b/Website/index.html
@@ -48,7 +48,7 @@
                     <h1>Most Recent Video</h1>
                 </div>
                 <div align="center">
-                    <iframe width="560" height="315" src="#" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/BWZHjpLSX64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <footer>
                     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
