--- a/Website/index.html
+++ b/Website/index.html
@@ -7,8 +7,8 @@
         <div class="topnav">
             <a class="active" href="index.html">Home</a>
             <a href="Collabs.html">Collaborations</a>
-            <a href="ShadowStormYT.html">ShadowStormYT</a>
-            <a href="WeazelStorm.html">WeazelStorm</a>
+            <a href="merch.html">Merch</a>
+            <a href="Contact.html">Contact us</a>
         </div>
     </head>
     <body>
@@ -43,10 +43,12 @@
                     <h2 class="mission">StormStarbrickYT is an 18 year old Twitch Streamer and YouTuber. He currently lives in Colorado. He hopes to start streaming again soon, but if not, you can catch his updates on his Twitter, Github, or anywhere else he is online. All links provided above.</h2>
                 </div>
                 <br>
+                <br>
                 <!-- Most Recent Video -->
                 <div align="center">
                     <h1>Most Recent Video</h1>
                 </div>
+
                 <div align="center">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/BWZHjpLSX64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
