--- a/Website/Collabs.html
+++ b/Website/Collabs.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>Collabs</title>
         <link rel="stylesheet" type="text/css" href="CSS/collabs.css">
         <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
         <div class="topnav">
             <a href="index.html">Home</a>
             <a class="active" href="Collabs.html">Collaborations</a>
-            <a href="ShadowStormYT.html">ShadowStormYT</a>
-            <a href="WeazelStorm.html">WeazelStorm</a>
+            <a href="merch.html">Merch</a>
+            <a href="Contact.html">Contact us</a>
         </div>
     </head>
     <body>
@@ -17,16 +17,17 @@
             <h2>Banabyte Network</h2>
             <h3>Zeropoint</h3>
             <p class="title">Founder</p>
-            <p> <button class="button"><a href="https://discord.gg/G6mThnFBNr">Contact</a></button></p>
+            <p> <a href="https://discord.gg/G6mThnFBNr" target="_blank"><button class="button">Contact</button></a></p>
         </div>
         <div align="center" class="collaboration">
             <img src="images/Nick (Programmer).png" alt="Light Saga" height="300">
             <h2>The Light Saga</h2>
             <p>YouTuber</p>
-            <p><button class="button" href="#">Contact</button></p>
+            <p> <a href="" target="_blank"><button class="button">Contact</button></a></p>
         </div>
         <div>
             <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         </div>
     </body>
 </html>
+<script src="JavaScript/home.js"></script>
