--- a/testing/index.html
+++ b/testing/index.html
@@ -3,3 +3,9 @@
     <title>testing dock 01</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
+<body>
+    <p><a href="cookie.html">Link</a></p>
+    <p id="info"></p>
+    <script src="cookie.js"
+</body>
