updates to collaborations page

--- a/Website/Collabs.html
+++ b/Website/Collabs.html
@@ -15,15 +15,28 @@
         <div align="center" class="collaboration">
             <img src="images/ALRU.png" alt="ALRU" height="300">
             <h2>Banabyte Network</h2>
-            <h3>Zeropoint</h3>
-            <p class="title">Founder</p>
+            <p>Programming work</p>
+            <p>2020-2022</p>
             <p> <a href="https://discord.gg/G6mThnFBNr" target="_blank"><button class="button">Contact</button></a></p>
         </div>
         <div align="center" class="collaboration">
             <img src="images/Nick (Programmer).png" alt="Light Saga" height="300">
             <h2>The Light Saga</h2>
             <p>YouTuber</p>
-            <p> <a href="" target="_blank"><button class="button">Contact</button></a></p>
+            <p>2020-Present</p>
+            <p> <a href="https://www.youtube.com/c/TheLightSaga" target="_blank"><button class="button">Contact</button></a></p>
+        </div>
+        <div align="center" class="collaboration">
+            <img src="images/StormCrew V2 Square.png" alt="StormCrew" height="300">
+            <h2>StormCrew</h2>
+            <p>Scrapped Project</p>
+            <p>2020-2022</p>
+        </div>
+        <div align="center" class="collaboration">
+            <img src="images/ShadowStorm.png" alt="ShadowStormYT" height="300">
+            <h2>ShadowStormYT</h2>
+            <p>Scrapped Project</p>
+            <p>2020-2022</p>
         </div>
         <div>
             <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
