updated living location

--- a/Website/index.html
+++ b/Website/index.html
@@ -39,7 +39,7 @@
                 <div align="center">
                     <img src="images/StormStarbrickYT V3.5.png" alt="storm" class="left" width="300px" height="auto">
                     <hr>
-                    <h2 class="mission">StormStarbrickYT is an 18 year old Twitch Streamer and YouTuber. He currently lives in Colorado. He hopes to start streaming again soon, but if not, you can catch his updates on his Twitter, Github, or anywhere else he is online. All links provided above.</h2>
+                    <h2 class="mission">StormStarbrickYT is an 18 year old Twitch Streamer and YouTuber. He currently lives in Arizona. He hopes to start streaming again soon, but if not, you can catch his updates on his Twitter, Github, or anywhere else he is online. All links provided above.</h2>
                 </div>
                 <br>
                 <br
